# substrate

./: Cargo.toml
client/api/src/: backend.rs  in_mem.rs
client/basic-authorship/src/: basic_authorship.rs
client/beefy/src/: worker.rs
client/beefy/src/communication/request_response/: incoming_requests_handler.rs
client/cli/src/: arg_enums.rs
client/cli/src/commands/: purge_chain_cmd.rs  run_cmd.rs  vanity.rs  verify.rs
client/cli/src/params/: network_params.rs  node_key_params.rs  shared_params.rs
primitives/arkworks/: Cargo.toml
primitives/arkworks/bls12/: Cargo.toml
primitives/arkworks/bls12/src/: g1.rs  g2.rs  lib.rs
primitives/arkworks/bls12_381/: Cargo.toml
primitives/arkworks/bls12_381/benches/: bls12_381.rs
primitives/arkworks/bls12_381/src/: lib.rs
primitives/arkworks/bls12_381/src/curves/: g1.rs  g2.rs  mod.rs  util.rs
primitives/arkworks/bls12_381/src/fields/: fq12.rs  fq2.rs  fq6.rs  tests.rs
primitives/arkworks/curves/bls12_381/: Cargo.toml
primitives/arkworks/curves/bls12_381/src/curves/: g1.rs  g2.rs  mod.rs  util.rs
primitives/arkworks/curves/bls12_381/src/tests/: mod.rs
primitives/arkworks/models/: Cargo.toml
primitives/arkworks/models/bls12/: Cargo.toml
primitives/arkworks/models/bls12/src/: g1.rs  g2.rs  lib.rs
primitives/arkworks/models/short_weierstrass/src/: affine.rs
primitives/arkworks/models/src/: lib.rs
primitives/arkworks/models/src/bls12/: g1.rs  g2.rs  mod.rs
primitives/arkworks/models/src/short_weierstrass/: Cargo.toml  group.rs  mod.rs
primitives/arkworks/models/src/short_weierstrass/src/: lib.rs
primitives/arkworks/src/: lib.rs
primitives/io/: Cargo.toml
primitives/io/src/: lib.rs
